<resources>
    <string name="app_name">SolveMeDis</string>
    <string name="title_easy">Easy</string>
    <string name="title_normal">Normal</string>
    <string name="title_hard">Hard</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="empty_quest">Empty Quest Field, this should not be empty</string>
    <string name="empty_ans_1">Empty Answer Field 1</string>
    <string name="empty_ans_2">Empty Answer Field 2</string>
    <string name="empty_ans_3">Empty Answer Field 3</string>
    <string name="empty_ans_4">Empty Answer Field 4</string>
    <string name="ok">OK</string>
    <string name="score">Right: 0</string>
    <string name="wrong">Wrong: 0</string>
</resources>