<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Math_Easy">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginBottom="659dp"
        android:text="@string/title_easy" />

    <TextView
        android:id="@+id/question_box_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="500dp"
        android:text="@string/empty_quest"
        android:textSize="22sp" />

    <Button
        android:id="@+id/back_from_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-328dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/easy_answer_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-328dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="410dp"
        android:text="@string/empty_ans_1" />

    <Button
        android:id="@+id/easy_answer_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-328dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="324dp"
        android:text="@string/empty_ans_2" />

    <Button
        android:id="@+id/easy_answer_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-328dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="243dp"
        android:text="@string/empty_ans_3" />

    <Button
        android:id="@+id/easy_answer_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-328dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="148dp"
        android:text="@string/empty_ans_4" />

</RelativeLayout>